# compile-time-sparse-matrix

./: CMakeLists.txt  README.md  dbg.h  linker.ld  main.cpp  static_test.cpp
sparse/: coo_matrix.h  csr_matrix.h
